# pythonproject

./: .env  Dockerfile  Dockerfile.save  alembic.ini  app.py  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  exceptions.py  pyproject.toml  requirements.txt
alembic/: alembic_helpers.py  env.py
alembic/versions/: 1edf17bb8244_added_update_date.py  2dd048d1d2e8_add_create_and_update_time.py  da9ec307e48a_define_date_field_better.py
data/: __all_models.py  db_session.py  modelbase.py  packages.py  release.py  users.py
db/: database.db  db_session.py
resourse/: package_resourse.py  user_resourse.py
schemas/: package_schema.py  user_schema.py
services/: package_services.py  user_services.py
servises/: package_servises.py
tests/: api_test.py  package_test.py  test.db  test_engine.py  user_test.py
