[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pendulum = "^2.1.2"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.22"
Flask-RESTful = "^0.3.9"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-JWT-Extended = "^4.2.3"
Flask-Bcrypt = "^0.7.1"
python-dotenv = "^0.19.0"
mysql-connector-python = "^8.0.26"

[tool.poetry.dev-dependencies]
alembic = "^1.6.5"
WebTest = "^2.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
